--- a/7/videogame/Makefile
+++ b/7/videogame/Makefile
@@ -1,2 +1,5 @@
 bounceld1:bounceld.o set_ticker.o
 	gcc bounceld.c set_ticker.c -l curses -o bounceld1
+
+bounce2d:bounce2d.o set_ticker.o
+	gcc bounce2d.c set_ticker.c -l curses -o bounce2d
